--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -4,3 +4,4 @@ spring.application.name=cloud-config
 
 # This is the default:
 spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=refresh
